--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
+
     android:layout_height="match_parent"
     tools:context=".edit_order">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="10sp">
+
     <EditText
         android:layout_marginTop="50sp"
         android:id="@+id/orderID"
@@ -91,5 +100,5 @@
         android:padding="5sp"
         android:src="@drawable/button_updateorder" />
 
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
