--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/home_lay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/home_lay"
     android:gravity="center_horizontal"
-    android:weightSum="7"
+
     tools:context=".home">
 
 
     <!--Creating the menu grid button-->
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="150sp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
 
         android:background="@drawable/home_bar"
         android:gravity="right"
         android:orientation="vertical"
-        android:padding="12sp">
+        android:padding="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/g2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/g1">
 
 
         <LinearLayout
@@ -64,167 +67,105 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/scrollView3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        app:layout_constraintBottom_toBottomOf="@id/g3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/g2">
+
+
+        <com.skydoves.elasticviews.ElasticImageView
+
+            android:id="@+id/ap1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="10sp"
+
+            android:clickable="true"
+            android:src="@drawable/pro"
+            app:layout_constraintBottom_toTopOf="@+id/cs1"
+            app:layout_constraintEnd_toStartOf="@+id/ao1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="NotSibling" />
+
+
+        <com.skydoves.elasticviews.ElasticImageView
+
+            android:id="@+id/ao1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="10sp"
+
+            android:clickable="true"
+            android:src="@drawable/order"
+            app:layout_constraintBottom_toTopOf="@+id/ab1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ap1"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="NotSibling" />
+
+        <com.skydoves.elasticviews.ElasticImageView
+
+            android:id="@+id/cs1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="10sp"
+
+            android:clickable="true"
+            android:src="@drawable/how"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/ab1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ap1"
+            tools:ignore="NotSibling" />
+
+        <com.skydoves.elasticviews.ElasticImageView
+
+            android:id="@+id/ab1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="10sp"
+
+            android:clickable="true"
+            android:src="@drawable/about"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cs1"
+            app:layout_constraintTop_toBottomOf="@+id/ao1"
+            tools:ignore="NotSibling" />
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:gravity="center"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="0.0" />
 
-        >
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_percent="0.2" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-
-
-            >
-
-            <!--   <androidx.cardview.widget.CardView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_margin="20sp"
-
-                   app:cardCornerRadius="8sp"
-                   app:cardElevation="2sp">-->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/g3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="1.0"
+        app:layout_constraintGuide_begin="20dp" />
 
 
-            <com.skydoves.elasticviews.ElasticImageView
-
-                android:id="@+id/ap1"
-                android:layout_width="150sp"
-                android:layout_height="150sp"
-                android:layout_margin="10sp"
-                android:clickable="true"
-                android:src="@drawable/pro"
-
-                />
-
-            <!--  <ImageView
-                             android:layout_width="150sp"
-                             android:layout_height="150sp"
-                             android:src="@drawable/pro" /> -->
-
-
-            <!--
-
-                          </androidx.cardview.widget.CardView>
-
-                          <androidx.cardview.widget.CardView
-                              android:layout_width="wrap_content"
-                              android:layout_height="wrap_content"
-                              android:layout_margin="10sp"
-
-
-                              app:cardCornerRadius="8sp"
-                              app:cardElevation="2sp">-->
-
-
-            <com.skydoves.elasticviews.ElasticImageView
-
-                android:id="@+id/ao1"
-                android:layout_width="150sp"
-                android:layout_height="150sp"
-                android:layout_margin="10sp"
-                android:clickable="true"
-                android:src="@drawable/order"
-
-                />
-
-            <!--   <ImageView
-                                        android:layout_width="150sp"
-                                        android:layout_height="150sp"
-                                        android:src="@drawable/order" />
-
-
-
-                </androidx.cardview.widget.CardView>-->
-        </LinearLayout>
-
-
-        <!--Secound Row-->
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:gravity="center"
-
-
-            >
-
-            <!--  <androidx.cardview.widget.CardView
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_margin="20sp"
-                  app:cardElevation="2sp"
-                  app:cardCornerRadius="8sp"
-
-
-                  >-->
-
-            <com.skydoves.elasticviews.ElasticImageView
-
-                android:id="@+id/cs1"
-                android:layout_width="150sp"
-                android:layout_height="150sp"
-                android:layout_margin="10sp"
-                android:clickable="true"
-                android:src="@drawable/how"
-
-                />
-
-            <!--  <ImageView
-                          android:layout_width="150sp"
-                          android:layout_height="150sp"
-                          android:src="@drawable/how"
-                          />
-
-
-
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10sp"
-                app:cardElevation="2sp"
-                app:cardCornerRadius="8sp"
-
-
-                >-->
-
-
-            <com.skydoves.elasticviews.ElasticImageView
-
-                android:id="@+id/ab1"
-                android:layout_width="150sp"
-                android:layout_height="150sp"
-                android:layout_margin="10sp"
-                android:clickable="true"
-                android:src="@drawable/about"
-
-                />
-            <!--  <ImageView
-                          android:layout_width="150sp"
-                          android:layout_height="150sp"
-
-                          android:src="@drawable/about"
-                          />
-
-
-
-              </androidx.cardview.widget.CardView>-->
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-
-
-
-  </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
